@@ -1,2 +1,0 @@
-python3 -m venv pdssp-airflow-env && export PYTHONPATH=.:/home/malapert/Work/pdssp-airflow/plugins && export PATH=/home/malapert/Work/pdssp-airflow/pdssp-airflow-env/bin:/home/malapert/Work/pdssp-airflow/pdssp-airflow-env/bin:/home/malapert/Work/pdssp-airflow/pdssp-airflow-env/bin:/home/malapert/Work/pdssp-airflow/pdssp-airflow-env/bin:/home/malapert/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
-source "/home/malapert/Work/pdssp-airflow/pdssp-airflow-env/bin/activate"
